# spacesim

./: .gitignore  CMakeLists.txt  curl.sh  downloaded_file  main.cpp  test.json
include/: downloader.hpp  json_parser.hpp  physics.hpp  planet.h  vec3d.hpp
src/: downloader.cpp  jsonparser.cpp  main.cpp  physics.cpp  planets.cpp  sphere.h
src/parser/: jsonparser.cpp
